--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@sendgrid/mail": "^7.6.2",
+    "bootstrap": "^5.1.3",
+    "bootswatch": "^5.1.3",
+    "formik": "^2.2.9",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.12.0",
