--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "sass": "^1.54.9",
+    "sweetalert2": "^11.4.32",
     "yup": "^0.32.11"
   },
   "devDependencies": {
